versions/v3.7.0/build/dts/api/bindings/gpio/ti,boosterpack-header.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/build/dts/api/bindings/gpio/ti,boosterpack-header.html
original_path: build/dts/api/bindings/gpio/ti,boosterpack-header.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down list at the bottom of the left panel and select the desired version.

# ti,boosterpack-header

Vendor: [Texas Instruments](../../bindings.md#dt-vendor-ti)

## Description

```text
TI BoosterPack GPIO header

GPIO pins exposed as BoosterPack headers on TI LaunchPads.

BoosterPack plug-in modules are available in 20 and 40 pin variants. The
20 pin variant has two 10 x 1 pin headers and the 40 pin variant has two
10 x 2 pin headers. Both variants are compatible and stackable.

The pins of the 20 pin variant and the outer row of the 40 pin variant are
numbered 1 through 20. The inner rows of the 40 pin variant are numbered 21
through 40. The BoosterPack pinout is depicted below:

1  3.3V     21 5V                    40 GPIO 20 GND
2  Analog   22 GND                   39 GPIO 19 GPIO / SPI CS
3  UART RXD 23 Analog                38 GPIO 18 GPIO
4  UART TXD 24 Analog                37 GPIO 17 GPIO
5  GPIO     25 Analog                36 GPIO 16 RESET
6  Analog   26 Analog                35 GPIO 15 SPI MOSI
7  SPI CLK  27 Analog                34 GPIO 14 SPI MISO
8  GPIO     28 Analog                33 GPIO 13 GPIO / SPI CS
9  I2C SCL  29                       32 GPIO 12 GPIO / SPI CS
10 I2C SDA  30                       31 GPIO 11 GPIO

Additional information about the BoosterPack pinout can be found at
http://processors.wiki.ti.com/index.php/BYOB or in the documentation for
a TI LaunchPad development kit,
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `gpio-map` | `compound` | This property is **required**. |
| `gpio-map-mask` | `compound` |  |
| `gpio-map-pass-thru` | `compound` |  |
| `#gpio-cells` | `int` | ```text Number of items to expect in a GPIO specifier ```  This property is **required**. |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “ti,boosterpack-header” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
